--- a/nvme_ol_90.adoc
+++ b/nvme_ol_90.adoc
@@ -27,9 +27,9 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 There are no known limitations.
  
-== Enable in-kernel NVMe multipath
+== Validate NVMe/FC
 
-You can enable the NVMe/FC in-kernel multipath using the following procedure.
+You can validate the NVMe version using the following procedure.
 
 .Steps
 
@@ -80,7 +80,7 @@ nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0032-3310-8033-b8c04f4c5132
 ----
 Vserver     Subsystem          Host NQN
 ----------- --------------- ----------------------------------------------------------
-vs_ol_nvme  nvme_ss_ol_1    nqn.2014-08.org.nvmexpress:uuid:edd38060-00f7-47aa-a9dc-4d8ae0cd969a
+vs_ol_nvme  nvme_ss_ol_1    nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0032-3310-8033-b8c04f4c5132
 ----
 +
 [NOTE]
@@ -180,7 +180,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 --
 .Steps
 
-. Verify that you are running the supported adapter driver and firmware versions. The native inbox qla2xxx driver included in the OL 8.6 GA kernel has the latest upstream fixes essential for ONTAP support:
+. Verify that you are running the supported adapter driver and firmware versions. The native inbox qla2xxx driver included in the OL 9.0 GA kernel has the latest upstream fixes essential for ONTAP support:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
@@ -206,7 +206,7 @@ include::_include/nvme/reuse_configure_nvmetcp.adoc[]
 . Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
 ----
-<<specify the command>> nvme discover -t tcp -w host-traddr -a traddr -p
+nvme discover -t tcp -w host-traddr -a traddr
 ----
 *Example output:*
 +
@@ -260,13 +260,13 @@ sectype: none
 . Verify that the other NVMe/TCP initiator-target LIF combinations are able to successfully fetch discovery log page data. 
 +
 ----
-<<specify the command>> nvme discover -t tcp -w host-traddr -a traddr -p
+nvme discover -t tcp -w host-traddr -a traddr
 ----
 +
 *Example output:*
 +
 ----
-#nvme discover -t tcp -w 192.168.5.13 -a 192.168.5.15
+# nvme discover -t tcp -w 192.168.5.13 -a 192.168.5.15
 # nvme discover -t tcp -w 192.168.5.13 -a 192.168.5.17
 # nvme discover -t tcp -w 192.168.6.13 -a 192.168.6.15
 # nvme discover -t tcp -w 192.168.6.13 -a 192.168.6.17
@@ -275,14 +275,14 @@ sectype: none
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
 +
 ----
-<<specify the command>>
+nvme connect-all -t tcp -w host-traddr -a traddr -l 1800
 ----
 +
 ----
 # nvme connect-all -t tcp -w 192.168.5.13 -a 192.168.5.15 -l 1800
 # nvme connect-all -t tcp -w 192.168.5.13 -a 192.168.5.17 -l 1800
-# nvme connect-all -t tcp -w 192.168.6.13-a 192.168.6.15 -l 1800
-# nvme connect-all -t tcp -w 192.168.6.13-a 192.168.6.17-l 1800
+# nvme connect-all -t tcp -w 192.168.6.13 -a 192.168.6.15 -l 1800
+# nvme connect-all -t tcp -w 192.168.6.13 -a 192.168.6.17 -l 1800
 ----
 
 ===	Enable 1MB I/O size
